[package]
name = "shared_object_density"
version = "0.1.0"
edition = "2021"

# TODO: rename query to query_txs
[[bin]]
name = "query"
path = "src/main.rs"

[[bin]]
name = "plot"
path = "src/bin/plot.rs"

[[bin]]
name = "query_obj"
path = "src/bin/query_obj.rs"

[lib]
name = "shared_object_density"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
clap = { version = "4.4.3", features = ["derive"] }
colored = { version = "2.0.4" }
memmap = "0.7.0"
strum_macros = "0.25.3"
indexmap = { version = "2.1.0", features = ["serde"] }
